# wyoming-moonshine-ext

./: Dockerfile  README.md  docker_run.sh  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
script/: format  lint  run
tests/: __init__.py  test_moonshine.py
wyoming_faster_whisper/: __main__.py  const.py  models.py  moonshine_handler.py
wyoming_moonshine/: __init__.py  __main__.py  const.py  dispatch_handler.py  models.py  moonshine_handler.py
