[project]
name = "wyoming-moonshine"
version = "4.0.0"
description = "Wyoming Server for Moonshine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Holden Karau"},
    {name = "Michael Hansen", email = "mike@rhasspy.org"},
]
keywords = ["wyoming", "moonshine", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming>=1.8,<2",
    "moonshine-voice",
]

[project.urls]
Homepage = "https://github.com/holdenk/wyoming-moonshine-ext"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["wyoming_moonshine"]
exclude = ["tests"]

[project.scripts]
wyoming-moonshine = "wyoming_moonshine.__main__:run"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "types-setuptools",
]
zeroconf = [
    "wyoming[zeroconf]",
]
